// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.kidschat.service.mobile";
option java_outer_classname = "MobileProto";
option objc_class_prefix = "SC";

package slugchat.service.mobile;

// The mobile service definition.
service Mobile {
    // Rpc for registering new client
    rpc RegisterClient (RegisterClientRequest) returns (RegisterClientResponse) {}

    // Rpc for creating new profile
    rpc CreateProfile (Profile) returns (Profile) {}

    // Rpc for listing profiles under given client
    rpc ListProfiles (ListProfilesRequest) returns (ListProfilesResponse) {}
}

enum Platform{
    UNKNOWN = 0;
    IOS = 1;
    ANDROID = 2;
    WEB = 3;
}

message RegisterClientRequest{
    string device_token = 1;
    Platform platform = 2;
}

message RegisterClientResponse{
    int32 client_id = 1;
}

message Profile{
    int32 profile_id = 1;
    int32 client_id = 2;
    int32 avatar = 3;
    string name = 4;
    int64 create_time = 5;
}

message ListProfilesRequest{
    int32 client_id = 1;
}

message ListProfilesResponse{
    repeated Profile profiles = 1;
}
